--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,26 @@
+asn1crypto==0.24.0
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+cryptography==2.2.2
 cycler==0.10.0
+Flask==0.12.2
+gunicorn==19.7.1
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
 kiwisolver==1.0.1
+MarkupSafe==1.0
 matplotlib==2.2.2
 numpy==1.14.2
 opencv-python==3.4.0.12
+pycparser==2.18
+pyOpenSSL==17.5.0
 pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.4
+requests==2.18.4
 six==1.11.0
+urllib3==1.22
+Werkzeug==0.14.1
